<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".activity.JavaCounterActivity">

    <TextView
        android:id="@+id/java_counter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/java_counter_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/java_counter_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/java_counter_plus_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java_counter_sum_simbol"
        app:layout_constraintBottom_toBottomOf="@id/java_counter_text"
        app:layout_constraintEnd_toStartOf="@id/java_counter_text"
        app:layout_constraintTop_toTopOf="@id/java_counter_text" />

    <TextView
        android:id="@+id/java_counter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/java_counter_minus_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java_counter_minus_simbol"
        app:layout_constraintBottom_toBottomOf="@id/java_counter_text"
        app:layout_constraintStart_toEndOf="@id/java_counter_text"
        app:layout_constraintTop_toTopOf="@id/java_counter_text" />

    <Button
        android:id="@+id/java_counter_reset_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/java_counter_reset_text"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/java_counter_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
